--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 ParaDNS Changes
 
+1.3
+    - Change cache to be global instead of per-resolver
+    - Separate cache and resolver cleanups
+    - Make timeouts and repeaters configurable
+
+1.2
+    - Support for ParaDNS::XS
+
 1.1
 
     - Cache NXDOMAIN lookups according to RFC 2308
