--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 ParaDNS Changes
 
+1.4
+	- Add ttl to passed parameters to callbacks
+	- Unified the cache hash
+	
 1.3
     - Change cache to be global instead of per-resolver
     - Separate cache and resolver cleanups
