--- a/Changes
+++ b/Changes
@@ -1,8 +1,23 @@
 ParaDNS Changes
 
+1.8
+	- CNAME recursion
+	- Added PARADNS_NO_CACHE env var support
+	- Fixed cache to support multiple answers
+	
+1.7
+    - Settable nameservers
+
+1.6
+    - Performance improvements
+
+1.5
+    - Improved tests
+    - Better code for when XS interface is available
+
 1.4
-	- Add ttl to passed parameters to callbacks
-	- Unified the cache hash
+    - Add ttl to passed parameters to callbacks
+    - Unified the cache hash
 	
 1.3
     - Change cache to be global instead of per-resolver
