Import of MSERGEANT/ParaDNS-1.9 from CPAN.
gitpan-cpan-distribution: ParaDNS
gitpan-cpan-version:      1.9
gitpan-cpan-path:         MSERGEANT/ParaDNS-1.9.tar.gz
gitpan-cpan-author:       MSERGEANT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 ParaDNS Changes
 
+1.9
+	- Fixed bug when duplicate IDs are given
+
 1.8
 	- CNAME recursion
 	- Added PARADNS_NO_CACHE env var support
